Fixed css bug. Show text in skipOverflowed messages.

--- a/platform/plugins/Streams/web/css/tools/chat.css
+++ b/platform/plugins/Streams/web/css/tools/chat.css
@@ -249,7 +249,6 @@
 }
 .Streams_chat_item.Streams_chat_message_skipOverflowed .Streams_chat_message_content {
 	display: block;
-	font-size: 0;
 }
 .Streams_chat_noMessages {
 	color: gray;
